--- a/autompg_colN_regression.ipynb
+++ b/autompg_colN_regression.ipynb
@@ -53,13 +53,13 @@
      "output_type": "stream",
      "text": [
       " C 드라이브의 볼륨에는 이름이 없습니다.\n",
-      " 볼륨 일련 번호: 5411-6D65\n",
+      " 볼륨 일련 번호: 78D5-6279\n",
       "\n",
-      " C:\\Develops\\ky_machinelearning\\files 디렉터리\n",
+      " C:\\Develops\\test_machinelearning\\files 디렉터리\n",
       "\n",
-      "2021-06-29  오후 09:49            21,515 auto-mpg.csv\n",
-      "               1개 파일              21,515 바이트\n",
-      "               0개 디렉터리  25,269,170,176 바이트 남음\n"
+      "2021-06-29  오전 11:03            21,913 auto-mpg.csv\n",
+      "               1개 파일              21,913 바이트\n",
+      "               0개 디렉터리  207,781,691,392 바이트 남음\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "(array([[-0.00646837, -0.75362806]]), array([46.86631946]))"
+       "(array([[-0.00640196, -0.73190678]]), array([46.34964226]))"
       ]
      },
      "execution_count": 17,
@@ -272,14 +272,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "89db4de7",
-   "metadata": {},
-   "source": [
-    "y = -0.00767661x_1 + -1.03509013x_2 + 46.31736442"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "beae7bb0",
@@ -288,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6961073949110694"
+       "0.6958759144286892"
       ]
      },
      "execution_count": 18,
@@ -297,13 +289,131 @@
     }
    ],
    "source": [
+    "# check with total data\n",
     "lr.score(x,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "aea4b54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7121652332058752"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check with a part train data\n",
+    "lr.score(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ca1e47d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6496440455895209"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check with a part of test data\n",
+    "lr.score(X_test,Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89db4de7",
+   "metadata": {},
+   "source": [
+    "y = -0.00767661x + -0.73190678x + 46.31736442"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "32f30f19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18.06190914]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# weight\tcylinders\n",
+    "lr.predict([[3504.0,8]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b9723e9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[25.56053794]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2790.0, 4\n",
+    "lr.predict([[2790.0, 4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cf4a06f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.971995399999997"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(-0.00767661*2790.0) + (-0.73190678*4 )+ 46.31736442"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "debd2597",
    "metadata": {},
    "outputs": [],
    "source": []
