--- a/autompg_colN_regression.ipynb
+++ b/autompg_colN_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9cd070ab",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b583d258",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "94a057eb",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c472e735",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e259cdf7",
    "metadata": {},
    "outputs": [
@@ -53,13 +53,13 @@
      "output_type": "stream",
      "text": [
       " C 드라이브의 볼륨에는 이름이 없습니다.\n",
-      " 볼륨 일련 번호: 78D5-6279\n",
+      " 볼륨 일련 번호: 5411-6D65\n",
       "\n",
-      " C:\\Develops\\test_machinelearning\\files 디렉터리\n",
+      " C:\\Develops\\ky_machinelearning\\files 디렉터리\n",
       "\n",
-      "2021-06-29  오전 11:03            21,913 auto-mpg.csv\n",
-      "               1개 파일              21,913 바이트\n",
-      "               0개 디렉터리  207,781,691,392 바이트 남음\n"
+      "2021-06-29  오후 09:49            21,515 auto-mpg.csv\n",
+      "               1개 파일              21,515 바이트\n",
+      "               0개 디렉터리  22,581,841,920 바이트 남음\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "118d2adf",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9e5a5e0d",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "(398, 9)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "38c0a89e",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5b90da41",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "daece1b3",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "891b6ee3",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "((398, 2), (398, 1))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "cefe5620",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d7688f1d",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "((298, 2), (100, 2), (298, 1), (100, 1))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "92061ff0",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0b636017",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6153a6dd",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,17 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "8686e1fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[-0.00640196, -0.73190678]]), array([46.34964226]))"
+       "(array([[-0.0067114 , -0.58167211]]), array([46.71731065]))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,17 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "beae7bb0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6958759144286892"
+       "0.696041286997504"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,17 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "aea4b54d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7121652332058752"
+       "0.7054030747172413"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,17 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "ca1e47d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6496440455895209"
+       "0.6637194252312717"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,17 +347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "32f30f19",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[18.06190914]])"
+       "array([[18.5471983]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,17 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "b9723e9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[25.56053794]])"
+       "array([[25.66582428]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "cf4a06f7",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
        "21.971995399999997"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,11 +412,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "debd2597",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sklearn.linear_model._base.LinearRegression"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "916f05fd",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3288854d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(lr, open('./saves/autompg_lr.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c104a8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((298, 1), (298, 1))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predict = lr.predict(X_train)\n",
+    "y_predict.shape, Y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e096a459",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>3.164193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>4.218735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>-2.694860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>2.788357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>6.408008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>-2.490403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>-1.822369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>-5.193763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>-5.227318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>5.864387</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>298 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          mpg\n",
+       "95   3.164193\n",
+       "299  4.218735\n",
+       "26  -2.694860\n",
+       "43   2.788357\n",
+       "381  6.408008\n",
+       "..        ...\n",
+       "365 -2.490403\n",
+       "12  -1.822369\n",
+       "154 -5.193763\n",
+       "98  -5.227318\n",
+       "347  5.864387\n",
+       "\n",
+       "[298 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_result = Y_train - y_predict\n",
+    "y_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00fdc8cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr.score(X_train,Y_train)"
+   ]
   }
  ],
  "metadata": {
