Colaboratory를 통해 생성됨

--- a/wholesalecustomer_kmeans.ipynb
+++ b/wholesalecustomer_kmeans.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmI5fzSlTvQBF7WBly/Xul",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPmI5fzSlTvQBF7WBly/Xul"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kaya1436/ky_machinelearning/blob/main/wholesalecustomer_kmeans.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -39,7 +28,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +51,7 @@
       "source": [
         "!ls -l"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +77,7 @@
       "source": [
         "!pwd"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +100,7 @@
       "source": [
         "!ls -l ./sample_data"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +129,7 @@
       "source": [
         "!ls -l ./Wholesale_customers_data.csv"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +154,7 @@
         "df = pd.read_csv('./Wholesale_customers_data.csv')\n",
         "df.info()"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +187,7 @@
       "source": [
         "X = df.iloc[:,:]"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +202,7 @@
       "source": [
         "X.shape"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +229,7 @@
         "scaler.fit(X)\n",
         "X = scaler.transform(X)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +241,7 @@
         "from sklearn import cluster\n",
         "kmeans = cluster.KMeans(n_clusters=5)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +256,7 @@
       "source": [
         "kmeans.fit(X)"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +282,7 @@
       "source": [
         "df['label'] = kmeans.labels_"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +298,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +429,7 @@
       "source": [
         "df.plot(kind='scatter', x='Milk', y='Frozen', c='label', cmap='Set1', figsize=(7,7))"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,7 +471,7 @@
         "dfx = df[-((df['label'] == 0) | (df['label'] == 4))]\n",
         "df.shape, dfx.shape"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,7 +500,7 @@
       "source": [
         "dfx.plot(kind='scatter', x='Milk', y='Frozen', c='label', cmap='Set1', figsize=(7,7))"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +537,7 @@
       "source": [
         "df.to_excel('./wholesale.xls')"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
